[tool.poetry]
name = "requestlog"
version = "v0.1.1"
description = "Structured request logging in Python"
authors = ["Rico Hermans <rix0rrr@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "requestlog"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
